-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.3.1
-
None
-
Raspberry OS (Raspbian Linux 11 (bullseye))
Raspberry Pi 4, Raspberry Pi 400
-
-
9184766ea (dev), 296f56004 (6.6), 34a9e20c6 (tqtc/lts-6.5)
Cross compiled application.
Target OS : Raspberry OS
Host OS : Ubuntu 22.04
Qt 6.3
Unable to find source-code formatter for language: qml. Available languages are: actionscript, ada, applescript, bash, c, c#, c++, cpp, css, erlang, go, groovy, haskell, html, java, javascript, js, json, lua, none, nyan, objc, perl, php, python, r, rainbow, ruby, scala, sh, sql, swift, visualbasic, xml, yaml
// import QtQuick import QtQuick import QtQuick.Window import QtQuick.Controls import QtQuick.Dialogs Window { visible: true width: 640 height: 480 title: qsTr("CROSS COMPILED QT6") FileDialog{ id:fdSave fileMode:FileDialog.SaveFile } Button { text: qsTr("Button") onClicked: { fdSave.open(); } } }
- relates to
-
QTBUG-108455 FileDialog.SaveFile mode is unusable
-
- Reported
-