Fix default button label for non-native file dialog in SaveFile mode

It would use the OpenFile label independently of actual mode.

Fixes: QTBUG-105080
Pick-to: 6.6
Change-Id: Ia529f6854dd676197af99cbe0a610f5833181ce2
Reviewed-by: Kaj Grönholm <kaj.gronholm@qt.io>